--- a/system_id/implementation.tex
+++ b/system_id/implementation.tex
@@ -383,7 +383,7 @@
         % hence a faster sample time is required for accurate system identification.
         Note that for all considered cable lengths, the prediction error has a sharp decrease for 
         $T_s >$~\SI{0.045}{\second}.
-        This may be because the model does not try to capture the small, high frequency oscilations in the dynamics
+        This may be because the model does not try to capture the small, high frequency oscillations in the dynamics
         at such slow sample times.
         Hence the long term prediction of the models fits the general shape of the dynamics well and results in low errors.
         However, this sample time is too slow for controlling the practical multirotor.
