--- a/system_id/white_black_box.tex
+++ b/system_id/white_black_box.tex
@@ -61,7 +61,7 @@
         Data-driven system identification methods produce black-box models.
         These models do not require predefined mathematical relations between system parameters.
         % The user only considers what goes into, and comes out of, the black-box.
-        % Something imagery about why it is called black box
+        % Something imagery about why it is called black-box
         No prior knowledge of the physics of the system are considered and no modelling assumptions are made.
         Black-box techniques determine the mathematical relationship between inputs and outputs of a system 
         using information from measurement data only.
@@ -91,7 +91,7 @@
         Non-linear models are often more accurate than linear models 
         because real-world system mostly contain non-linear dynamics.
         The dynamics of a multirotor and suspended payload are also non-linear.
-        % Examples of black box models with multirotors and payloads in literature ???
+        % Examples of black-box models with multirotors and payloads in literature ???
 
         \paragraph
         However, non-linear models are inherently more complex than linear models. 
