Changed 0.3 height plots to 0.5

--- a/system_id/plots/MAE_vs_q_double_pend.tex
+++ b/system_id/plots/MAE_vs_q_double_pend.tex
@@ -5,7 +5,7 @@
             xlabel = {Number of delay-coordinates, $q$},
             ylabel = $\overline{NMAE}$ \phantom{~},
             % x unit = \si{\second},
-            y unit = \%
+            y unit = \%,
             xmin = 6,     xmax = 50,
             ymin = 3,  ymax = 6.5,
             grid = major,
