--- a/control_systems/control_systems.tex
+++ b/control_systems/control_systems.tex
@@ -48,7 +48,7 @@
         The control architectures are summarised in Table~\ref{tbl:controller_summary} 
         by pairing the system identification techniques along with the appropriate controllers.
         It was firstly shown in Chapter~\ref{chap:system_id} that the system identifcation techniques worked in simulation.
-        Emphasise that control is now applied in a full \gls{SITL} simulation.
+        % Emphasise that control is now applied in a full \gls{SITL} simulation.
         
         \FloatBarrier\subsection{Single paylaod}
 
