--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -21,7 +21,7 @@ This 3D mathematical model will be used in a nonlinear simulation of a multiroto
     \label{sec:linear_model}
 
 \section{Discretised model}
-\section{Model verification}
+\FloatBarrier\section{Model verification}
 
     \paragraph
     Intro
@@ -49,7 +49,7 @@ This 3D mathematical model will be used in a nonlinear simulation of a multiroto
     \end{enumerate}
 
 
-\section{Dynamic payloads}
+\FloatBarrier\section{Dynamic payloads}
 
     In this work, a dynamic payload refers to a payload with dynamics that differ significantly from a rigid mass.
     When considering suspended payloads, a dynamic payload induces dynamics which differ from that of a simple pendulum.
