Added csv files for comparing MPC vs LQR vs PID

--- a/control/control.tex
+++ b/control/control.tex
@@ -1,7 +1,7 @@
-\graphicspath{{control_systems/fig/}}
+\graphicspath{{control/fig/}}
 
 \chapter{Control systems}
-\label{chap:control_systems}
+\label{chap:control}
 
     \FloatBarrier\section{Overview of controllers}
 
