--- a/results/results.tex
+++ b/results/results.tex
@@ -163,7 +163,7 @@
             % Notice how the first two oscillation peaks differ noticeably from the expected linear damping shape.
             % Since the payload is attached below the \gls{CoM} of the multirotor, the oscillating pitch angle of the multirotor also affects the swing angle of the payload.
 
-            % ?? However, as discussed in Chapter~\ref{chap:control_systems}, the LQR controller which utilises the white-box model is quite robust against model uncertainty and may still result in acceptable control with such a model.
+            % ?? However, as discussed in Chapter~\ref{chap:control}, the LQR controller which utilises the white-box model is quite robust against model uncertainty and may still result in acceptable control with such a model.
             % Recall from Chapter~\ref{chap:system_id} that the damping coefficient is not estimated, but a manually tuned value is used.
 
             \input{results/plots/cable_length_vs_train_time_wind.tex}
@@ -507,9 +507,9 @@
             Because the model prediction matches the shape of the practical testing data so closely,
             it is expected that this model can be used for a practical \gls{MPC} implementation on practical data. 
 
-            % As discussed in Chapter~\ref{chap:control_systems}, 
+            % As discussed in Chapter~\ref{chap:control}, 
             % this prediction model can be used in an \gls{MPC} to optimise the control input to actively damp the payload swing angles.
-            % It was also noted in Chapter~\ref{chap:control_systems} that the accuracy of the model 
+            % It was also noted in Chapter~\ref{chap:control} that the accuracy of the model 
             % has a direct impact on the performance of the controller.
             % Because the model prediction matches the practical testing data so closely,
             % it is expected that this model will 
