--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -197,7 +197,7 @@
 \input{lit_study/lit_study.tex}
 \input{modelling/modelling.tex}
 \input{system_id/system_id.tex}
-\input{control_systems/control_systems.tex}
+\input{control/control.tex}
 \input{exp_design/exp_design.tex}
 \input{results/results.tex}
 \input{conclusion/conclusion.tex}
