--- a/system_id/implementation.tex
+++ b/system_id/implementation.tex
@@ -770,5 +770,5 @@
         % The k-step-ahead prediction accuracy of this model is important for the performance of the \gls{MPC}.
         % Therefore comparing the performance of the controllers which use these models 
         % is a better approach than comparing the model accuracy.
-        % This will be investigated in Chapter~\ref{chap:control_systems}.
+        % This will be investigated in Chapter~\ref{chap:control}.
 
