--- a/system_id/plant.tex
+++ b/system_id/plant.tex
@@ -33,7 +33,7 @@
         \end{bmatrix}^T .
     \end{equation}
     % This is the state vector of the considered plant, 
-    % but the controllers apply an augmented state vector that will be discussed in Chapter~\ref{chap:control_systems}.
+    % but the controllers apply an augmented state vector that will be discussed in Chapter~\ref{chap:control}.
 
     \paragraph
     Note that position is not included in the state vector because it does not affect the velocity controller.
